# knowlege_base_qa_bot

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: chat.py  index.py  query_records.py
app/core/: config.py
app/db/: raw_index_repository.py  session.py
app/domain/: __init__.py  concept_card_builder.py  concept_card_maintenance.py  index_manifest.py  indexing_plan.py  ingest.py  markdown_parser.py  prompt_builder.py  raw_evidence_selector.py  retrieval_policy.py  tokenizer.py
app/services/: answer_generation.py  card_generation.py  chat.py  indexing.py
docs/: billing_ops.md  returns_playbook.md  warehouse_playbook.md
scripts/: inspect_cards.py  spec_alignment_audit.py
specs/: spec_alignment_audit.md  system_design.md
tests/: test_answer_generation.py  test_card_generation.py  test_chat_api.py  test_chat_service.py  test_concept_card_builder.py  test_concept_card_maintenance.py  test_concept_card_repository.py  test_grounded_answer_contract.py  test_index_api.py  test_index_manifest.py  test_indexing_plan.py  test_indexing_service.py  test_ingest.py  test_markdown_parser.py  test_prompt_builder.py  test_query_record_repository.py  test_query_records_api.py  test_raw_evidence_selector.py  test_raw_index_repository.py  test_retrieval_policy.py
